# minimal_doctest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  example_test.cpp
